--- a/Kotlin Koans Converted/lesson2/task6/task.html
+++ b/Kotlin Koans Converted/lesson2/task6/task.html
@@ -1,2 +1,2 @@
 <h2>Destructuring declarations</h2>
-<p>Read about <a href="http://kotlinlang.org/docs/reference/multi-declarations.html#multi-declarations">destructuring declarations</a> and make the following code compile by adding one word.</p>
+<p>Read about <a href="http://kotlinlang.org/docs/reference/multi-declarations.html">destructuring declarations</a> and make the following code compile by adding one word.</p>
