--- a/Kotlin Koans EE plugin/lesson1/task3/task.html
+++ b/Kotlin Koans EE plugin/lesson1/task3/task.html
@@ -1,5 +1,5 @@
 <h2>Named arguments</h2>
-<p><a href="http://kotlinlang.org/docs/reference/functions.html#default-arguments">Default and named</a> arguments help to minimize the number of overloads and improve the readability of the function invocation. The library function <a href="http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/join-to-string.html"><code>joinToString</code></a> is declared with default values for parameters:</p><pre><code data-lang="text/x-kotlin">fun joinToString(
+<p><a href="http://kotlinlang.org/docs/reference/functions.html#default-arguments">Default and named</a> arguments help to minimize the number of overloads and improve the readability of the function invocation. The library function <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/join-to-string.html"><code>joinToString</code></a> is declared with default values for parameters:</p><pre><code data-lang="text/x-kotlin">fun joinToString(
     separator: String = &quot;, &quot;,
     prefix: String = &quot;&quot;,
     postfix: String = &quot;&quot;,
