--- a/Kotlin Koans EE plugin/lesson3/task9/task.html
+++ b/Kotlin Koans EE plugin/lesson3/task9/task.html
@@ -1,5 +1,5 @@
 <h2>Partition</h2>
-<p>Implement <code>Shop.getCustomersWithMoreUndeliveredOrdersThanDelivered()</code> using <a href="http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/partition.html"><code>partition</code></a>.</p><pre><code data-lang="text/x-kotlin">val numbers = listOf(1, 3, -4, 2, -11)
+<p>Implement <code>Shop.getCustomersWithMoreUndeliveredOrdersThanDelivered()</code> using <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/partition.html"><code>partition</code></a>.</p><pre><code data-lang="text/x-kotlin">val numbers = listOf(1, 3, -4, 2, -11)
 val (positive, negative) = numbers.partition { it &gt; 0 }
 positive == listOf(1, 3, 2)
 negative == listOf(-4, -11)
