--- a/Kotlin Koans EE plugin/lesson5/task3/task.html
+++ b/Kotlin Koans EE plugin/lesson5/task3/task.html
@@ -1,2 +1,2 @@
 <h2>The function apply</h2>
-<p>The previous examples can be rewritten using the library function <a href="http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/apply.html"><code>apply</code></a> (see examples below). Write your own implementation of this function named 'myApply'.</p>
+<p>The previous examples can be rewritten using the library function <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/apply.html"><code>apply</code></a> (see examples below). Write your own implementation of this function named 'myApply'.</p>
